# U1P-xiaomi-plantassisant

./: README.md  build_error.txt  build_output.txt
demo/Project/Application/src/: main.c  plant_logic.c
demo/Project/CMAKE_Project/: CMakeLists.txt  build_and_flash.bat  cmake_output.txt  gd32f470zk.cfg
demo/Project/GD32F470Z_BSP/inc/: c2.h  c3.h  e1.h  i2c.h  plant_logic.h  uart.h
demo/Project/GD32F470Z_BSP/src/: c2.c  c3.c  e1.c  i2c.c  plant_logic.c  s1.c  systick.c  uart.c
u2p_vision/: plant_recognition_c2.py
